# agentic-ai-series

./: README.md  pyproject.toml
ai_agent_101/: ai_agent_101.ipynb
ai_agent_101/data/: research_output.md
ai_agent_101/logs/: prompts.jsonl
ai_agent_101/logs/agents/: editor.jsonl  researcher.jsonl  scraper.jsonl  writer.jsonl
ai_agent_101/output/: tweet.md
crew_ai_101/: config.yaml  crew-ai-101.ipynb
crew_ai_flows/: crew_ai_flows.ipynb
crew_ai_tools_structure_output/: structure_output_and_custom_tools.ipynb
multi_crew_flows/: crewai_flow.html  multi_crew_flow.ipynb
multi_crew_flows/assets/: Welcome Llama 4 Maverick & Scout on Hugging Face.md  example_linkedin.txt  example_threads.txt
multi_crew_flows/output/: Welcome Llama 4 Maverick & Scout on Hugging Face.md_linkedin.json  Welcome Llama 4 Maverick & Scout on Hugging Face.md_twitter.json
